--- a/jupyter_notebooks/Notebook_Template.ipynb
+++ b/jupyter_notebooks/Notebook_Template.ipynb
@@ -6,7 +6,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **(ADD THE NOTEBOOK NAME HERE)**"
+        "# **Data Collection**"
       ]
     },
     {
@@ -17,7 +17,7 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* Write your notebook objective here, for example, \"Fetch data from Kaggle and save as raw data\", or \"engineer features for modelling\"\n",
+        "* Fetch data from kaggle\n",
         "\n",
         "## Inputs\n",
         "\n",
