--- a/jupyter_notebooks/05 - Modeling and Evaluation - Predict Sale Price.ipynb
+++ b/jupyter_notebooks/05 - Modeling and Evaluation - Predict Sale Price.ipynb
@@ -15596,7 +15596,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "metadata": {
         "id": "YrZPif2aHdyO"
       },
@@ -15613,7 +15613,7 @@
         }
       ],
       "source": [
-        "joblib.dump(value=pipeline_clf, filename=f\"{file_path}/clf_pipeline.pkl\")"
+        "joblib.dump(value=selected_pipeline, filename=f\"{file_path}/regressor_pipeline.pkl\")"
       ]
     },
     {
